fixed remaining scroll bar overflow issues

--- a/client/personal-site/src/index.css
+++ b/client/personal-site/src/index.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 
-html {
+html, body {
     font-family: 'Courier Prime', monospace;
-    max-height: 100vh;
     margin: 0;
-    padding: 0;
+    height: 100%;
+    overflow: hidden
 }
